# proxymanager

./: .hgignore  CMakeLists.txt  INSTALL.txt  ProjectHome.md  ProxyManager.pro  README.md  jsonresource.cpp  jsonresource.h  main.cpp  notifications.cpp  notifications.h  pm_client.pro  pm_client.qrc  profile.cpp  profile.h  profiledialog.cpp  profiledialog.h  profilelistmodel.cpp  profilelistmodel.h  profilemanager.ui  proxymanager.pro  proxymanager.qrc  trayicon.cpp  trayicon.h  ui_profile.h
client/: client.pro  client.qrc  dbus_interface.cpp  dbus_interface.h  moc_proxy_manager_interface.cpp  notifications.h  profile.cpp  profile.h  profilelistmodel.cpp  profilelistmodel.h  profilemanager.cpp  profilemanager.h  profilemanager.ui  trayicon.cpp  trayicon.h
daemon/: apache.conf  daemon.pro  dbus_adaptor.cpp  dbus_adaptor.h  init_script  main.cpp  proxy-manager  proxy_manager_adaptor.h  proxy_manager_consts.h  proxy_manager_daemon.cpp  proxy_manager_daemon.h  proxy_manager_interface.xml
desktop/: proxymanager.desktop
